# grex

./: .clang-tidy  .eutaxis  CMakeLists.txt  Makefile  ReadMe.md  meson.build  meson_options.txt  subprojects.txt
benchmark/: meson.build
benchmark/neon/: load-part.cpp  store-part.cpp
benchmark/x86/: multibyte.cpp
docs/: Doxyfile  backend.rst  conf.py  fix_sphinx.py  index.rst  operations.rst  requirements.txt  simd.rst
docs/_static/: custom.css
docs/operations/: abs.rst  arithmetic.rst  bitwise.rst  blend.rst  classification.rst  compare.rst  convert.rst  expand.rst  extract.rst  horizontal.rst  insert.rst  load.rst  logical.rst  mask-index.rst  minmax.rst  multibyte.rst  set.rst  shift.rst  sqrt.rst  store.rst  to-array.rst
include/grex/: backend.hpp  base.hpp  format.hpp  glue.hpp  grex.hpp  lookup-table.hpp  math.hpp  operations-tagged.hpp  operations.hpp  tags.hpp  types.hpp
include/grex/backend/: active.hpp  base.hpp  choosers.hpp  defs.hpp  macros.hpp  neon.hpp  operations.hpp  scalar.hpp  shared.hpp  x86.hpp
include/grex/backend/active/: instruction-sets.hpp  operations.hpp  sizes.hpp  types.hpp
include/grex/backend/active/operations/: arithmetic.hpp  blend.hpp  convert.hpp  expand.hpp  extract-single.hpp  extract.hpp  merge.hpp  minmax.hpp  reinterpret.hpp  set.hpp  split.hpp
include/grex/backend/macros/: base.hpp  bool-conversion.hpp  cast.hpp  conditional.hpp  equals.hpp  for-each.hpp  math.hpp  repeat.hpp  transform.hpp  types.hpp
include/grex/backend/neon/: instructions.hpp  macros.hpp  operations.hpp  sizes.hpp  types.hpp
include/grex/backend/neon/macros/: cast.hpp  types.hpp
include/grex/backend/neon/operations/: abs.hpp  arithmetic-mask.hpp  arithmetic.hpp  bit.hpp  bitwise.hpp  blend-static.hpp  blend-zero-static.hpp  blend.hpp  classification.hpp  compare.hpp  convert.hpp  expand-register.hpp  expand.hpp  extract-single.hpp  extract.hpp  fmadd-family.hpp  gather.hpp  horizontal-add.hpp  horizontal-and.hpp  horizontal-minmax.hpp  insert-static.hpp  insert.hpp  load.hpp  mask-convert.hpp  mask-index.hpp  merge.hpp  minmax.hpp  multibyte.hpp  reinterpret.hpp  set.hpp  shift.hpp  shingle.hpp  shrink.hpp  shuffle-static.hpp  shuffle.hpp  split.hpp  sqrt.hpp  store.hpp  subnative.hpp  to-array.hpp  (+1 more)
include/grex/backend/scalar/: operations.hpp  sizes.hpp
include/grex/backend/shared/: defs.hpp  operations.hpp
include/grex/backend/shared/operations/: arithmetic-mask.hpp  blend-static.hpp  blend-zero-static.hpp  blend.hpp  classification.hpp  compare.hpp  convert.hpp  expand-scalar.hpp  expand-vector.hpp  expand.hpp  extract.hpp  gather.hpp  horizontal-add.hpp  horizontal-and.hpp  horizontal-minmax.hpp  insert-static.hpp  insert.hpp  load.hpp  mask-convert.hpp  mask-index.hpp  multibyte.hpp  set.hpp  shift.hpp  shingle.hpp  shrink.hpp  shuffle-static.hpp  store.hpp  to-array.hpp
include/grex/backend/x86/: cpuid.hpp  defs.hpp  helpers.hpp  instruction-sets.hpp  macros.hpp  operations.hpp  sizes.hpp  types.hpp
include/grex/backend/x86/macros/: base.hpp  bool-conversion.hpp  conditional.hpp  decrement.hpp  for-each.hpp  intrinsics.hpp  math.hpp  multiversion.hpp  repeat.hpp  transform.hpp  types.hpp
include/grex/backend/x86/operations/: abs.hpp  arithmetic-mask.hpp  arithmetic.hpp  bit.hpp  bitwise.hpp  blend-static.hpp  blend-zero-static.hpp  blend.hpp  classification.hpp  compare.hpp  comparisons.hpp  convert.hpp  cutoff.hpp  expand-scalar.hpp  expand-vector.hpp  expand.hpp  extract-single.hpp  extract.hpp  fmadd-family.hpp  gather.hpp  helpers.hpp  horizontal-add.hpp  horizontal-and.hpp  horizontal-minmax.hpp  insert-static.hpp  insert.hpp  intrinsics.hpp  load.hpp  mask-convert.hpp  mask-index.hpp  merge.hpp  minmax.hpp  multibyte.hpp  negation.hpp  reinterpret.hpp  set.hpp  shift.hpp  shingle.hpp  shrink.hpp  shuffle-static.hpp  (+6 more)
include/grex/backend/x86/operations/blend-static/: 128.hpp  256.hpp  512.hpp  base.hpp  shared.hpp
include/grex/backend/x86/operations/blend-zero-static/: 128.hpp  256.hpp  512.hpp  base.hpp  shared.hpp
include/grex/backend/x86/operations/convert/: 128-mask.hpp  128-vector.hpp  128.hpp  256-vector.hpp  256.hpp  512-vector.hpp  512.hpp  base.hpp
include/grex/backend/x86/operations/shuffle/: 128.hpp  aux.hpp  check.hpp  wrap.hpp
include/grex/backend/x86/operations/shuffle-static/: 128.hpp  256.hpp  512.hpp  base.hpp  shared.hpp
include/grex/base/: defs.hpp
include/grex/format/: fmtlib.hpp  std.hpp
include/grex/glue/: choosers.hpp
subprojects/: .gitignore  ReadMe.md
subprojects/packagefiles/google-benchmark/: meson_options.txt
test/: arithmetic.cpp  basic.cpp  blend.cpp  componentwise.cpp  convert.cpp  defs.hpp  expand.cpp  extract.cpp  fmt.hpp  gather.cpp  general.cpp  horizontal.cpp  mem.cpp  meson.build  multibyte.cpp  nary.cpp  rng.hpp  set.cpp  shingle.cpp  shuffle-dynamic.cpp  shuffle.cpp
tools/: cpuid.cpp  x86_64_levels.py
